// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExchangeScene calls fetchUser at start 1`] = `<EmailRequired />`;

exports[`ExchangeScene renders email required screen correctly 1`] = `<EmailRequired />`;

exports[`ExchangeScene renders exchange correctly 1`] = `
<Exchange__Wrapper>
  <Exchange__Container>
    <Exchange__Column>
      <Connect(ExchangeContainer)
        from="BTC"
        to="ETH"
      />
    </Exchange__Column>
  </Exchange__Container>
</Exchange__Wrapper>
`;

exports[`ExchangeScene renders failure correctly 1`] = `
<DataErrorContainer
  onClick={[MockFunction]}
/>
`;

exports[`ExchangeScene renders getstarted correctly 1`] = `
<Exchange__Wrapper>
  <GetStarted />
</Exchange__Wrapper>
`;

exports[`ExchangeScene renders loading correctly 1`] = `
<Exchange__Wrapper>
  <BlockchainLoader
    height="200px"
    width="200px"
  />
</Exchange__Wrapper>
`;

exports[`ExchangeScene renders not asked correctly 1`] = `
<Exchange__Wrapper>
  <BlockchainLoader
    height="200px"
    width="200px"
  />
</Exchange__Wrapper>
`;
